# searchers

./: .gitignore  Cargo.toml  README.md
indexer/: Cargo.toml
indexer/src/: cli.rs  filetyper.rs  main.rs  processfile.rs  supportedfiletype.rs
indexer/testdata/: Fireplace Installation + Owners Manual Downloads _ Heat & Glo.html  textfil.txt  word.docx  word2.docx
parsers/: Cargo.toml
parsers/src/: docxparser.rs  lib.rs  pdfparser.rs
