[workspace]
members = [
    "indexer","parsers"
#    "searcher"
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["tor.erik.n.larsen@gmail.com"]

[workspace.dependencies]
log = "0.4.28"
env_logger = "0.11.8"
chrono = "0.4.42"
walkdir = "2.5.0"
clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
anstyle = "1.0.11"