[package]
name = "indexer"
version = "0.0.1"
edition = "2024"

[dependencies]
parsers = { path = "../parsers" }
env_logger = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
anstyle = { workspace = true }
zip = "5.1.1"
walkdir.workspace = true
md5 = "0.8.0"
meilisearch-sdk = "0.29.1"
lopdf = {version = "0.38.0"}

[[bin]]
name = "indexer"
path = "src/main.rs"

