[package]
name = "parsers"
version = "0.0.1"
edition = "2024"

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
walkdir.workspace = true
zip = "5.1.1"
md5 = "0.8.0"
lopdf = {version = "0.38.0"}

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "parsers"
path = "src/lib.rs"
